--- a/css/jk.css
+++ b/css/jk.css
@@ -2,14 +2,15 @@
 blockquote, body, button, dd, dl, dt, fieldset, figure, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p, pre, select, td, textarea, th, ul {
 	font-family: Verdana,"Lantinghei SC","Hiragino Sans GB","Microsoft Yahei",Helvetica,arial,\5b8b\4f53,sans-serif;
 }
+a, dd, div, dl, i, img, input, li, p, span, ul {
+	box-sizing: border-box;
+}
 
 .width_1000 {
 	width: 1000px;
 	margin: 0 auto;
 }
-a, dd, div, dl, i, img, input, li, p, span, ul {
-	box-sizing: border-box;
-}
+
 
 /* header start */
 #header {
@@ -29,6 +30,7 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	background: url(../images/logo_jk.png) no-repeat;
 	background-size: 100%;
 	text-indent: -9999px;
+	margin-top: 7px;
 }
 #header .search {
 	position: relative;
@@ -115,4 +117,123 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
   overflow: hidden;
   background: #35b558;
   background: -webkit-gradient(linear,10% 10%,100% 100%,color-stop(0.14,#35b550),color-stop(0.5,#8aca8c),color-stop(1,#2d85ca));
+}
+
+/*navigation*/
+#navigation {
+	width: 100%;
+	height: 42px;
+}
+#navigation .nav_box {
+	height: 42px;
+	border-bottom: 1px solid #e8e8e8;
+	box-shadow: rgba(0,0,0,.1) 0 1px 5px;
+}
+#navigation .nav_box .nav {
+	position: relative;
+	height: 42px;
+	line-height: 42px;
+}
+
+#navigation .nav_box .nav .nav_word {
+	float: left;
+	width: 740px;
+}
+#navigation .nav_box .nav .nav_word > a {
+	display: inline-block;
+	width: 118px;
+	text-align: center;
+	font-size: 14px;
+	color: #333;
+	line-height: 42px;
+}
+#navigation .nav_box .nav .nav_word > a:hover {
+	color: #35b558;
+	text-decoration: none;
+}
+#navigation .nav_box .nav .nav_word a:nth-child(1) {
+	width: auto;
+	margin-right: 18px;
+}
+#navigation .nav_box .nav .nav_word:hover .popup {
+	display: block;
+}
+#navigation .nav_box .nav .nav_word .popup {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 42px;
+	width: 100%;
+	height: 140px;  
+	padding-left: 50px;
+	border: 1px solid #e8e8e8;
+	border-top: 0;
+	background: rgba(255,255,255,0.97);
+	box-shadow: rgba(0,0,0,.1) 0 1px 5px;
+}
+#navigation .nav_box .nav .nav_word .popup li {
+	position: relative;
+	float: left;
+	width: 120px;
+	padding: 10px 0 14px 15px;
+	border-right: 1px solid #F7F7F7;
+}
+#navigation .nav_box .nav .nav_word .popup li:nth-child(1) {
+	border-left: 1px solid #f7f7f7;
+}
+#navigation .nav_box .nav .nav_word .popup li:hover {
+	background: #F7F7F7;
+}
+#navigation .nav_box .nav .nav_word .popup li:hover .arrow {
+	display: block;
+}
+#navigation .nav_box .nav .nav_word .popup li .arrow {
+	position: absolute;
+	left: 54px;
+	top: -7px;
+	display: block;
+	width: 12px;
+  	height: 7px;
+  	background: url(../images/nav-angle_f7c86b6.png) no-repeat;
+  	background-size: 100% 100%;
+  	display: none;
+}
+#navigation .nav_box .nav .nav_word .popup li > a {
+	line-height: 29px;
+	display: block;
+	text-align: left;
+	margin-right: 0;
+	font-size: 12px;
+	color: #666;
+}
+#navigation .nav_box .nav .nav_word .popup li > a:hover {
+	color: #38b65b;
+	text-decoration: none;
+}
+
+
+
+#navigation .nav_box .nav .user {
+	float: right;
+}
+#navigation .nav_box .nav .user a {
+	width: auto;
+	padding-left: 24px;
+	margin-left: 18px;
+	font-size: 12px;
+	color: #333;
+	line-height: 42px;
+}
+#navigation .nav_box .nav .user a:hover {
+	color: #35b558;
+	text-decoration: none;
+}
+#navigation .nav_box .nav .user a:nth-child(1) {
+	background: url(../images/vip-icon_76ae754.png) no-repeat;
+}
+#navigation .nav_box .nav .user a:nth-child(2) {
+	background: url(../images/star-icon_c593bc1.png) no-repeat;
+}
+#navigation .nav_box .nav .user a:nth-child(3) {
+	background: url(../images/dl-icon_4bc18a7.png) no-repeat;
 }
