--- a/css/jk.css
+++ b/css/jk.css
@@ -10,6 +10,9 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	width: 1000px;
 	margin: 0 auto;
 }
+.mar_top {
+	margin-top: 20px;
+}
 
 
 /* header start */
@@ -121,8 +124,10 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 
 /*navigation*/
 #navigation {
+	position: relative;
 	width: 100%;
 	height: 42px;
+	z-index: 999;
 }
 #navigation .nav_box {
 	height: 42px;
@@ -236,4 +241,181 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 }
 #navigation .nav_box .nav .user a:nth-child(3) {
 	background: url(../images/dl-icon_4bc18a7.png) no-repeat;
+}
+
+
+/*focus*/
+
+#focus {
+
+}
+#focus .focus_left {
+	position: relative;
+	float: left;
+	width: 210px;
+	border-top: 2px solid #35b558;
+	border-right: 0;
+	height: 373px;
+}
+#focus .focus_left ul {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #e4e4e4;
+	border-top: 0;
+}
+#focus .focus_left ul li {
+	width: 208px;
+	height: 37px;
+	line-height: 37px;
+	padding: 0 15px;
+	font-size: 13px;
+	color: #333;
+	border-bottom: 1px solid #F5F5F5;
+	background: #fff url(../images/more-icon_d39346f.png) 186px center no-repeat;
+	background-size: 6px 10px;
+	cursor: pointer;
+	font-weight: 400;
+}
+#focus .focus_left ul li > a {
+	color: #333333;
+}
+#focus .focus_left ul li:hover {
+  color: #333;
+  border-top: 1px solid #e4e4e4;
+  border-bottom: 1px solid #e4e4e4;
+  margin-left: -2px;
+  height: 38px;
+  margin-top: -1px;
+  border-left: 2px solid #35b558;
+  padding-left: 18px;
+  border-right: 3px solid #fff;
+  width: 213px;
+  background: #fff;
+  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.1);
+  -moz-box-shadow: 1px 1px 2px rgba(0,0,0,.1);
+  box-shadow: 1px 1px 2px rgba(0,0,0,.1); 
+}
+#focus .focus_left ul li:hover a {
+	color: #35b558;
+	font-weight: bold;
+}
+#focus .focus_left ul li:hover .item_pop {
+	display: block;
+}
+#focus .focus_left ul li .item_pop {
+	display: none;
+	position: absolute;
+	left:210px;
+	top: -2px;
+	width: 401px;
+	min-height: 373px;
+	background: #fff;
+	border: 1px solid #e4e4e4;  
+	border-left: 0;
+	z-index: 100;
+	box-shadow: 1px 2px 4px rgba(0,0,0,.1);
+}
+#focus .focus_left ul li .item_pop dl {
+	margin: 0 10px;
+	overflow: hidden;
+}
+#focus .focus_left ul li .item_pop dl dt {
+	display: block;
+	border-bottom: 1px solid #f5f5f5;
+	height: 37px;
+	line-height: 45px;
+}
+#focus .focus_left ul li .item_pop dl dd {
+	margin-left: -8px;
+	padding: 3px 0;
+}
+#focus .focus_left ul li .item_pop dl dd a {
+	float: left;
+	display: inline-block;
+	height: 14px;
+	line-height: 14px;
+	margin-bottom: 10px;
+	margin-top: 4px;
+	padding: 0 7px;
+	color: #666;
+	font-size: 12px;
+	white-space: nowrap;
+	font-weight: 400;
+	border-right: 1px solid #e0e0e0;
+}
+#focus .focus_left ul li .item_pop dl dd a:last-child {
+	border-right: 0;
+}
+
+
+
+
+
+#focus .focus_mid {
+	float: left;
+	width: 560px;
+	margin-left: 10px;
+}
+#focus .focus_mid .slide {
+	display: inline-block;
+	position: relative;
+	width: 560px;
+	height: 260px;
+	overflow: hidden;
+}
+
+#focus .focus_mid .slide .img_box {
+	position: absolute;
+	left: 0;
+	width: 5000px;
+	height: 260px;
+}
+#focus .focus_mid .slide .img_box li {
+	float: left;
+}
+#focus .focus_mid .slide .btn {
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	display: block;
+	width: 40px;
+	height: 50px;
+	background-color: #000;
+	opacity: 0.5;
+	filter:alpha(opacity=50);
+	font-family: "宋体";
+	font-size: 40px;
+	text-align: center;
+	line-height: 50px;
+	color: #fff;
+	cursor: pointer;
+}
+#focus .focus_mid .slide .btn_left {
+	left: 0;
+}
+#focus .focus_mid .slide .btn_right {
+	right: 0;
+}
+
+#focus .focus_mid .slide .nav_box {
+	position: absolute;
+	bottom: 12px;
+	width: 100%;
+	text-align: center;
+}
+#focus .focus_mid .slide .nav_box li {
+	display: inline-block;
+	width: 39px;
+	height: 2px;
+	background: #fff;
+	margin: 0 6px;
+	cursor: pointer;
+}
+#focus .focus_mid .slide .nav_box .on {
+	background: #34b558;
+}
+
+#focus .focus_right {
+	float: right;
+	margin-left: 10px;
 }
