--- a/css/jk.css
+++ b/css/jk.css
@@ -1,6 +1,11 @@
  /*公共样式 */
 blockquote, body, button, dd, dl, dt, fieldset, figure, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p, pre, select, td, textarea, th, ul {
-	font-family: Verdana,"Lantinghei SC","Hiragino Sans GB","Microsoft Yahei",Helvetica,arial,\5b8b\4f53,sans-serif;
+  margin: 0;
+  padding: 0;
+  -moz-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: Verdana,"Lantinghei SC","Hiragino Sans GB","Microsoft Yahei",Helvetica,arial,\5b8b\4f53,sans-serif;
 }
 a, dd, div, dl, i, img, input, li, p, span, ul {
 	box-sizing: border-box;
@@ -127,7 +132,7 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	position: relative;
 	width: 100%;
 	height: 42px;
-	z-index: 999;
+	z-index: 9999;
 }
 #navigation .nav_box {
 	height: 42px;
@@ -220,10 +225,11 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 
 #navigation .nav_box .nav .user {
 	float: right;
+	width: 260px;
 }
 #navigation .nav_box .nav .user a {
 	width: auto;
-	padding-left: 24px;
+	padding-left: 22px;
 	margin-left: 18px;
 	font-size: 12px;
 	color: #333;
@@ -247,7 +253,7 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 /*focus*/
 
 #focus {
-
+	position: relative;
 }
 #focus .focus_left {
 	position: relative;
@@ -256,6 +262,7 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	border-top: 2px solid #35b558;
 	border-right: 0;
 	height: 373px;
+	z-index: 1000;
 }
 #focus .focus_left ul {
 	width: 100%;
@@ -357,6 +364,7 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	margin-left: 10px;
 }
 #focus .focus_mid .slide {
+	float: left;
 	display: inline-block;
 	position: relative;
 	width: 560px;
@@ -380,21 +388,26 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	display: block;
 	width: 40px;
 	height: 50px;
-	background-color: #000;
-	opacity: 0.5;
-	filter:alpha(opacity=50);
-	font-family: "宋体";
-	font-size: 40px;
-	text-align: center;
-	line-height: 50px;
 	color: #fff;
 	cursor: pointer;
+	display: none;
+	text-indent: -9999px;
 }
 #focus .focus_mid .slide .btn_left {
 	left: 0;
+	background: url(../images/banner-left_fe0df34.png) no-repeat;
+	background-position: -12px -6px;
 }
 #focus .focus_mid .slide .btn_right {
 	right: 0;
+	background: url(../images/banner-right_a0bdd7d.png) no-repeat;
+	background-position: -12px -6px;
+}
+#focus .focus_mid .slide .btn_left:hover {
+	background-position: -12px -66px;
+}
+#focus .focus_mid .slide .btn_right:hover {
+	background-position: -12px -66px;
 }
 
 #focus .focus_mid .slide .nav_box {
@@ -415,7 +428,215 @@ a, dd, div, dl, i, img, input, li, p, span, ul {
 	background: #34b558;
 }
 
+
+#focus .focus_mid .slide_bottom {
+	float: left;
+	position: relative;
+	width: 560px;
+	height: 100px;
+	border: 1px solid #E2E2E2;
+	margin-top: 13px;
+	overflow: hidden;
+}
+#focus .focus_mid .slide_bottom .img_box {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 5000px;
+	height: 100px;
+}
+#focus .focus_mid .slide_bottom .img_box li {
+	float: left;
+	width: 186.5px;
+	height: 100px;
+	border-right: 1px solid #E2E2E2;
+}
+#focus .focus_mid .slide_bottom .img_box li a {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	font-size: 12px;
+	color: #666;
+}
+#focus .focus_mid .slide_bottom .img_box li a img {
+	width: 40px;
+	height: 40px;
+	margin: 6px auto;
+}
+#focus .focus_mid .slide_bottom .img_box li a p {
+	height: 16px;
+	margin-bottom: 4px;
+}
+#focus .focus_mid .slide_bottom .btn {
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	display: block;
+	width: 24px;
+	height: 40px;
+	background: url(../images/focus-nav_4593a01.png) no-repeat;
+	background-size: 48px 80px;
+	font-size: 40px;
+	z-index: 200;
+	cursor: pointer;
+}
+#focus .focus_mid .slide_bottom .btn_left {
+	left: 0;
+	background-position: 0 0;
+}
+#focus .focus_mid .slide_bottom .btn_right {
+	right: 0;
+	background-position: -24px 0
+}
+#focus .focus_mid .slide_bottom .btn_left:hover {
+	left: 0;
+	background-position: 0 -40px;
+}
+#focus .focus_mid .slide_bottom .btn_right:hover {
+	right: 0;
+	background-position: -24px -40px;
+}
+
+
+
+
 #focus .focus_right {
 	float: right;
+	width: 210px;
+	height: 373px;
+	overflow: hidden;
+	border: 1px solid #E4E4E4;
 	margin-left: 10px;
+}
+#focus .focus_right .news {
+	padding: 0 13px;
+	height: 125px;
+	border-bottom: 1px solid #E4E4E4;
+}
+#focus .focus_right .news h3 {
+  margin-top: 10px;
+  color: #333;
+  font-size: 14px;
+}
+#focus .focus_right .news .list {
+	margin-top: 5px;
+}
+#focus .focus_right .news .list li a {
+	display: block;
+	color: #666;
+	font-size: 12px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	line-height: 1.8;
+}
+#focus .focus_right .news .list li a.red {
+	color: red;
+}
+#focus .focus_right .user {
+	height: 86px;
+	border-bottom: 1px solid #E4E4E4;
+	overflow: hidden;
+}
+#focus .focus_right .user .head {
+	float:left;
+	width: 64px;
+	margin-top: 10px;
+}
+#focus .focus_right .user .head img {
+	display: block;
+	width: 40px;
+	height: 40px;
+	margin: 0 auto;
+}
+#focus .focus_right .user .hello {
+	float: left;
+	font-size: 12px;
+	color: #666;
+	margin-top: 10px;
+}
+#focus .focus_right .user .entrance {
+	float: left;
+	margin-top: 7px;
+}
+#focus .focus_right .user .entrance a {
+	float: left;
+	display: block;
+	width: 48px;
+	height: 20px;
+	font-size: 12px;
+	color: #fff;
+	line-height: 20px;
+	text-align: center;
+}
+#focus .focus_right .user .entrance .loginIn {
+	margin-right: 10px;
+	background: #FB5D20;
+}
+#focus .focus_right .user .entrance .signIn {
+	background: #35b558;
+}
+
+#focus .focus_right .recommend .list li {
+	float: left;
+	display: block;
+	width: 52px;
+	height: 76px;
+	border-bottom: 1px solid #F5F5F5;
+    border-right: 1px solid #F5F5F5;
+    font-size: 12px;
+    color: #000;
+    text-align: center;
+}
+#focus .focus_right .recommend li .icon {
+	display: block;
+	width: 25px;
+	height: 25px;
+	margin: 13px auto 0;
+	background: url(../images/recommend_4a9a464.png) no-repeat;
+	background-size: 71px 232px;
+}
+#focus .focus_right .recommend li .icon.question {
+  background-position: -5px -3px;
+}
+#focus .focus_right .recommend li .icon.wiki {
+  background-position: -5px -31px;
+}
+#focus .focus_right .recommend li .icon.lession {
+  background-position: -5px -59px;
+}
+#focus .focus_right .recommend li .icon.group {
+  background-position: -5px -87px;
+}
+#focus .focus_right .recommend li .icon.download {
+  background-position: -5px -117px;
+}
+#focus .focus_right .recommend li .icon.known {
+  background-position: -5px -144px;
+}
+#focus .focus_right .recommend li .icon.occupation {
+  background-position: -5px -173px;
+}
+#focus .focus_right .recommend li .icon.vip {
+  background-position: -5px -202px;
+}
+
+#focus .focus_right .recommend li .word {
+	line-height: 23px;
+}
+#focus .focus_right .recommend li .arrow {
+	display: block;
+	width: 0px;
+	height: 0;
+	box-sizing: content-box;
+	border-top: 6px solid #E4E4E4;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	margin: 0 auto;
+}
+
+#focus .focus_right .recommend li a .word {
+	color: #000;
 }
